k8s/lldap/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lldap
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: lldap
  template:
    metadata:
      labels:
        app: lldap
    spec:
      containers:
        - name: lldap
          image: lldap/lldap:stable-alpine@sha256:2a8454b668c1aba7157e832eab0e242e1e7eb5fb7591d7e7774ba05286511ca8
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 17170
            - name: ldap
              containerPort: 3890
          volumeMounts:
            - name: lldap-volume
              mountPath: /etc/lldap/data
      volumes:
        - name: lldap-volume
          persistentVolumeClaim:
            claimName: lldap-pvc
