k8s/lldap/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lldap
spec:
  type: ClusterIP
  selector:
    app: lldap
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 17170
